# rkyolo

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md
.cargo/: config.toml
examples/: outputs_usage.rs
rknn-ffi/: Cargo.toml  build.rs
rknn-ffi/src/: context.rs  io.rs  lib.rs  mem.rs  utils.rs
rkyolo-app/: Cargo.toml
rkyolo-app/src/: config.rs  drawing.rs  main.rs  postprocess.rs  processors.rs  utils.rs
rkyolo-core/: Cargo.toml
rkyolo-core/src/: drawing.rs  lib.rs  postprocess.rs
rkyolo-eval/: Cargo.toml
rkyolo-eval/src/: main.rs  map_computer.rs
