[package]
name = "rkyolo-app"
version = "0.1.0"
edition = "2024"

[dependencies]
rkyolo-core = { path = "../rkyolo-core" }
clap = { version = "4.5.4", features = ["derive"] }
walkdir = "2.5.0"
log = "0.4.21"
env_logger = "0.11.3"
opencv = { version = "*", features = ["clang-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "*"
